Remove JUnit 4 from spock-core runtime dependencies

--- a/spock-spring/spring5-test/spring5-test.gradle
+++ b/spock-spring/spring5-test/spring5-test.gradle
@@ -5,6 +5,7 @@ dependencies {
 
   testCompile project(":spock-core")
   testCompile project(":spock-spring")
+  testCompile libs.junit4
   testCompile "org.springframework:spring-context"
   testCompile ("org.springframework:spring-test")
 
