Remove JUnit 4 from spock-core dependencies

--- a/spock-junit4/junit4.gradle
+++ b/spock-junit4/junit4.gradle
@@ -11,8 +11,9 @@ Spock is inspired from JUnit, jMock, RSpec, Groovy, Scala, Vulcans, and other fa
 dependencies {
   compile project(":spock-core")
   compile libs.junit4
-}
 
+  testCompile libs.groovyTest  //for @NotYetImplemented
+}
 
 jar {
   manifest {
