--- a/build.gradle
+++ b/build.gradle
@@ -33,10 +33,6 @@ ext {
   groovyDependencies = [
     "org.codehaus.groovy:groovy:${groovyVersion}",
   ]
-  groovyTestDependencies = [
-    "org.codehaus.groovy:groovy-test:${groovyVersion}", //for @NotYetImplemented
-    "org.codehaus.groovy:groovy-sql:${groovyVersion}",  //for some Spring and Unitils tests
-  ]
   groovyConsoleExtraDependencies = [
     "org.codehaus.groovy:groovy-console:${groovyVersion}"
   ]
@@ -56,7 +52,11 @@ ext {
     bytebuddy: "net.bytebuddy:byte-buddy:1.9.11",
     cglib: "cglib:cglib-nodep:3.2.10",
     groovy: groovyDependencies,
+    groovySql: "org.codehaus.groovy:groovy-sql:${groovyVersion}", //for some Spring and Unitils tests
+    groovyTest: "org.codehaus.groovy:groovy-test:${groovyVersion}", //for @NotYetImplemented
     h2database: "com.h2database:h2:1.3.176",
+    hamcrest: "org.hamcrest:hamcrest-core:2.2",
+    jaxb: "javax.xml.bind:jaxb-api:2.3.0",
     junit4: "junit:junit:4.13",
     junitBom: "org.junit:junit-bom:5.6.1",
     jupiter: "org.junit.jupiter:junit-jupiter",
@@ -64,8 +64,7 @@ ext {
     junitPlatformTestkit: "org.junit.platform:junit-platform-testkit",
     junitPlatformConsole: "org.junit.platform:junit-platform-console",
     log4j: "log4j:log4j:1.2.17",
-    objenesis: "org.objenesis:objenesis:3.0.1",
-    jaxb: "javax.xml.bind:jaxb-api:2.3.0"
+    objenesis: "org.objenesis:objenesis:3.0.1"
   ]
   if (snapshotVersion && System.env.CI != "true") {
     //build time is not crucial for local SNAPSHOT builds, unless published from CI server
