--- a/spock-specs/specs.gradle
+++ b/spock-specs/specs.gradle
@@ -4,33 +4,19 @@ description = "Spock specifications for the Core Module. Yes, we eat our own dog
 
 apply plugin: "spock-base"
 
-configurations {
-  junit
-}
-
 dependencies {
   testCompile project(":spock-core")
-  testCompile project(":spock-junit4")
-  // for groovy.sql.Sql and groovy.transform.NotYetImplemented
-  testCompile groovyTestDependencies
+  testCompile libs.groovySql  //for groovy.sql.Sql
 
   testRuntime libs.asm
   testRuntime libs.bytebuddy
   testRuntime libs.cglib
   testRuntime libs.objenesis
   testRuntime libs.h2database
-
-  junit libs.junit4
 }
 
 sourceCompatibility = javaVersion
 targetCompatibility = javaVersion
-
-// necessary to make @NotYetImplemented transform work (transform that ships
-// with Groovy and statically references third-party class junit.framwork.AssertionFailedError)
-tasks.withType(GroovyCompile) {
-	groovyClasspath += configurations.junit
-}
 
 test {
   reports.junitXml.enabled = true
