In the spring Dubbo project, solve the problem that the member variables of the Java class containing the annotation @Reference cannot be mocked

--- a/settings.gradle
+++ b/settings.gradle
@@ -35,3 +35,5 @@ def nameBuildScriptsAfterProjectNames(projects) {
     nameBuildScriptsAfterProjectNames(prj.children)
   }
 }
+include 'spock-dubbo'
+
