Use new JUnit method for supplying custom listener

--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ ext {
     hamcrest            : [group: 'org.hamcrest', name: 'hamcrest-core', version: '2.2'],
     jaxb                : [group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'],
     junit4              : [group: 'junit', name: 'junit', version: '4.13'],
-    junitBom            : [group: 'org.junit', name: 'junit-bom', version: '5.6.1'],
+    junitBom            : [group: 'org.junit', name: 'junit-bom', version: '5.7.0-M1'],
     jupiter             : [group: 'org.junit.jupiter', name: 'junit-jupiter'],
     junitPlatform       : [group: 'org.junit.platform', name: 'junit-platform-engine'],
     junitPlatformTestkit: [group: 'org.junit.platform', name: 'junit-platform-testkit'],
