--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,6 @@
-import java.text.SimpleDateFormat
-
 import static groovy.io.FileType.FILES
 
 plugins {
-  id 'com.gradle.build-scan'
   id "base"
   id "org.asciidoctor.jvm.convert"
   id "jacoco"
@@ -46,7 +43,7 @@ ext {
   }
   fullVersion = baseVersion + ((!snapshotVersion && milestone) ? "-M$milestone" : "") + "-groovy-$variant" + (snapshotVersion ? "-SNAPSHOT" : '')
   variantLessVersion = baseVersion + (snapshotVersion ? "-SNAPSHOT" : (milestone ? "-M$milestone" : ""))
-  javaVersions = [1.8, 11] // ensure that latest version is actually build on travis, otherwise no docs get published
+  javaVersions = [1.8, 11, 14] // ensure that latest version is actually build on travis, otherwise no docs get published
   javaVersion = System.getProperty("java.specification.version") as BigDecimal
 
   libs = [
@@ -197,7 +194,7 @@ subprojects {
   }
 
   jacoco {
-    toolVersion = '0.8.2'
+    toolVersion = '0.8.5'
   }
 }
 
@@ -405,11 +402,6 @@ def configureGroovydoc(task) {
   configure(task) {
     include "spock/**"
   }
-}
-
-buildScan {
-  termsOfServiceUrl = 'https://gradle.com/terms-of-service'
-  termsOfServiceAgree = 'yes'
 }
 
 subprojects {
