junit.platform.testkit and therefore assertj should be optional
Signed-off-by: Raymond Augé <raymond.auge@liferay.com>

--- a/spock-core/core.gradle
+++ b/spock-core/core.gradle
@@ -56,6 +56,8 @@ jar {
   bnd(
     'Export-Package': ['org.spockframework.*', 'spock.*'].join(','),
     'Import-Package': [
+      /org.assertj.core.*;resolution:=optional/,
+      /org.junit.platform.testkit.*;resolution:=optional/,
       /org.hamcrest.*;resolution:=optional/,
       /org.objenesis.*;resolution:=optional/,
       /net.bytebuddy.*;resolution:=optional/,
