--- a/spock-core/core.gradle
+++ b/spock-core/core.gradle
@@ -1,3 +1,7 @@
+import aQute.bnd.gradle.BundleTaskConvention
+import aQute.bnd.gradle.FileSetRepositoryConvention
+import aQute.bnd.gradle.Resolve
+
 plugins {
   id "biz.aQute.bnd.builder"
 }
@@ -51,15 +55,17 @@ jar {
   bnd(
     'Export-Package': ['org.spockframework.*', 'spock.*'].join(','),
     'Import-Package': [
-      /groovy.*;version="[${groovyVersion},${org.gradle.util.VersionNumber.parse(groovyVersion).major + 1})"/,
-      /org.codehaus.groovy.*;version="[${groovyVersion},${org.gradle.util.VersionNumber.parse(groovyVersion).major + 1})"/,
-      /org.junit.*;version="[${libs.junitBom.version},${org.gradle.util.VersionNumber.parse(libs.junitBom.version).major + 1})"/,
-      /org.hamcrest.*;version="[${libs.hamcrest.version},${org.gradle.util.VersionNumber.parse(libs.hamcrest.version).major + 1})";resolution:=optional/,
-      /org.objenesis.*;version="[${libs.objenesis.version},${org.gradle.util.VersionNumber.parse(libs.objenesis.version).major + 1})";resolution:=optional/,
-      /net.bytebuddy.*;version="[${libs.bytebuddy.version},${org.gradle.util.VersionNumber.parse(libs.bytebuddy.version).major + 1})";resolution:=optional/,
-      /net.sf.cglib.*;version="[${libs.cglib.version},${org.gradle.util.VersionNumber.parse(libs.cglib.version).major + 1})";resolution:=optional/,
-      /org.objectweb.asm.*;version="[${libs.asm.version},${org.gradle.util.VersionNumber.parse(libs.asm.version).major + 1})";resolution:=optional/,
-      'org.w3c.dom.*'].join(',')
+      'org.junit.platform.testkit.*;resolution:=optional',
+      'org.hamcrest.*;resolution:=optional',
+      'org.objenesis.*;resolution:=optional',
+      'net.bytebuddy.*;resolution:=optional',
+      'net.sf.cglib.*;resolution:=optional',
+      'org.objectweb.asm.*;resolution:=optional',
+      '*'
+    ].join(','),
+    '-noclassforname': 'true',
+    '-noextraheaders': 'true',
+    '-removeheaders': 'Private-Package'
   )
 }
 
@@ -79,4 +85,29 @@ task coreConsole(type: JavaExec,
   doFirst {
     workingDir.mkdirs()
   }
+}
+
+def osgiPropertiesFile = file("$buildDir/verifyOSGiProperties.bndrun")
+
+// Bnd's Resolve task uses a properties file for its configuration. This
+// task writes out the properties necessary for it to verify the OSGi
+// metadata.
+tasks.register('osgiProperties', WriteProperties) {
+  outputFile = osgiPropertiesFile
+  property('-standalone', true)
+  property('-runee', "JavaSE-${javaVersion}")
+  property('-runrequires', "osgi.identity;filter:='(osgi.identity=${project.name})'")
+}
+
+// Bnd's Resolve task is what verifies that a jar can be used in OSGi and
+// that its metadata is valid. If the metadata is invalid this task will
+// fail.
+tasks.register('verifyOSGi', Resolve) {
+  dependsOn(osgiProperties)
+  setBndrun(osgiPropertiesFile)
+  reportOptional = false
+}
+
+tasks.check {
+  dependsOn(verifyOSGi)
 }
