--- a/settings.gradle
+++ b/settings.gradle
@@ -29,18 +29,21 @@ include "spock-spring"
 include "spock-spring:spring3-test"
 include "spock-guice"
 include "spock-junit4"
-include "spock-temp"
 include "spock-testkit"
 
 if ((System.getProperty("variant") as BigDecimal ?: 2.5) != 3.0) {
   //Remove once Groovy 2.5 support is dropped
   include "spock-groovy2-compat"
+} else if (JavaVersion.current().isJava9Compatible()) {
+  // works only in Java 9+ and groovy 3+ as spock-groovy2-compat is incompatible with the module system
+  include "spock-module-test"
 }
 
 // https://issues.apache.org/jira/projects/TAP5/issues/TAP5-2588
 if (JavaVersion.current().isJava8()) {
   include "spock-tapestry"
 }
+
 
 include "spock-unitils"
 include "spock-gradle"
