--- a/spock-module-test/module-test.gradle
+++ b/spock-module-test/module-test.gradle
@@ -2,10 +2,6 @@ ext.displayName = "Spock Framework - Temp Specs for Core Module"
 
 apply plugin: "spock-base"
 
-//configurations {
-//  junit
-//}
-
 dependencies {
   testCompile project(":spock-core")
 
@@ -13,24 +9,28 @@ dependencies {
   testRuntime libs.bytebuddy
   testRuntime libs.cglib
   testRuntime libs.objenesis
-  testRuntime libs.h2database
-
-//  junit libs.junit4
 }
 
 sourceCompatibility = javaVersion
 targetCompatibility = javaVersion
 
-// necessary to make @NotYetImplemented transform work (transform that ships
-// with Groovy and statically references third-party class junit.framwork.AssertionFailedError)
-//tasks.withType(GroovyCompile) {
-//	groovyClasspath += configurations.junit
-//}
+tasks.withType(JavaCompile) {
+  sourceCompatibility = javaVersion
+  targetCompatibility = javaVersion
+  options.compilerArgs -= ['--release', '8']
+  options.encoding = 'UTF-8'
+}
+
+java {
+  // enable module path
+  modularity.inferModulePath = true
+}
+
 
 test {
   useJUnitPlatform()
   reports.junitXml.enabled = true
-  reports.html.enabled = false
+  reports.html.enabled = true
 
   testLogging.exceptionFormat = "full"
   testLogging.showExceptions = true
