--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,12 +10,26 @@ on:
 
 jobs:
   build-and-verify:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
+        os: ['ubuntu-latest']
         variant: ['2.5', '3.0']
         java: ['8', '11', '15']
+        include:
+          - os: 'windows-latest'
+            variant: '2.5'
+            java: '8'
+          - os: 'windows-latest'
+            variant: '3.0'
+            java: '8'
+          - os: 'macos-latest'
+            variant: '2.5'
+            java: '8'
+          - os: 'macos-latest'
+            variant: '3.0'
+            java: '8'
     steps:
       - uses: actions/checkout@v2
         with:
@@ -25,8 +39,8 @@ jobs:
         uses: actions/cache@v2
         with:
           path: |
-            /root/.gradle/caches/
-            /root/.gradle/wrapper/dists
+            ~/.gradle/caches/
+            ~/.gradle/wrapper/dists
           key: test-${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle', '**/*.gradle.kts', '**/gradle.properties', 'gradle/**', 'buildSrc/src/main/**') }}
           restore-keys: |
             test-${{ runner.os }}-gradle-
@@ -36,8 +50,9 @@ jobs:
           java-version: ${{ matrix.java }}
       - name: 'Build Spock'
         run: |
-          ./gradlew --no-daemon --no-parallel --version
-          ./gradlew --no-daemon --parallel ghActionsBuild -Dvariant=${{ matrix.variant }} --scan --stacktrace
+          ./gradlew --version
+          ./gradlew --no-parallel --scan --stacktrace --warning-mode=all ghActionsBuild -Dvariant=${{ matrix.variant }}
+          ./gradlew --stop
       - name: 'Upload to Codecov.io'
         shell: bash
         run: |
