Use Codedov action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,6 +58,4 @@ jobs:
         run: |
           ./gradlew --stop
       - name: 'Upload to Codecov.io'
-        shell: bash
-        run: |
-          bash <(curl -s https://codecov.io/bash)
+        uses: codecov/codecov-action@v1
