--- a/spock-temp/temp.gradle
+++ b/spock-temp/temp.gradle
@@ -22,7 +22,7 @@ sourceCompatibility = javaVersion
 targetCompatibility = javaVersion
 
 // necessary to make @NotYetImplemented transform work (transform that ships
-// with Groovy and statically references third-party class junit.framwork.AssertionFailedError)
+// with Groovy and statically references third-party class junit.framework.AssertionFailedError)
 //tasks.withType(GroovyCompile) {
 //	groovyClasspath += configurations.junit
 //}
