--- a/spock-unitils/src/test/resources/unitils.properties
+++ b/spock-unitils/src/test/resources/unitils.properties
@@ -4,7 +4,7 @@ database.dialect=h2
 database.userName=
 database.password=
 database.schemaNames=public
-database.storedIndentifierCase.h2=auto
+database.storedIdentifierCase.h2=auto
 database.identifierQuoteString.h2=auto
 org.unitils.core.dbsupport.DbSupport.implClassName.h2=org.unitils.core.dbsupport.H2DbSupport
 org.dbunit.dataset.datatype.IDataTypeFactory.implClassName=org.dbunit.ext.h2.H2DataTypeFactory
