--- a/build.gradle
+++ b/build.gradle
@@ -231,38 +231,18 @@ task codeCoverageReport (type: JacocoReport, group: 'Coverage reports') {
   }
 }
 
-if (gradle.startParameter.taskNames == ["travisCiBuild"]) {
-  gradle.startParameter.taskNames = ["build", "codeCoverageReport"]
-  subprojects {
-    tasks.withType(Test) {
-      maxParallelForks = 2
-    }
-  }
-  if (System.getenv("TRAVIS_PULL_REQUEST") == "false" && System.getenv("TRAVIS_BRANCH") == "master") {
-    if (javaVersion == javaVersions.min()) {
-      gradle.startParameter.taskNames += ["publish"]
-      if (!snapshotVersion) {
-        gradle.startParameter.taskNames += ["tagRelease"]
-      }
-    }
-    if (javaVersion == javaVersions.max()) {
-      if (variant == variants.max()) {
-        gradle.startParameter.taskNames += ["publishJavadoc", "publishDocs"]
-      }
-    }
-  }
-}
-
 if (gradle.startParameter.taskNames == ["ghActionsBuild"]) {
   gradle.startParameter.taskNames = ["build", "codeCoverageReport"]
 }
 
 if (gradle.startParameter.taskNames == ["ghActionsPublish"] || gradle.startParameter.taskNames == ["ghActionsDocs"] ) {
   gradle.startParameter.taskNames = []
+  boolean isMaster = System.getenv("GITHUB_REF") == "refs/heads/master"
+  boolean isTag = System.getenv("GITHUB_REF")?.startsWith('refs/tags/spock-')
   if (!(System.getenv("GITHUB_EVENT_NAME") == "push"
-          && System.getenv("GITHUB_REF") == "refs/heads/master"
+          && (isMaster || isTag)
           && System.getenv("GITHUB_REPOSITORY") == 'spockframework/spock')) {
-    throw new IllegalArgumentException("""ghActionsPublish can only be run on push to branch master in repo spockframework/spock
+    throw new IllegalArgumentException("""ghActionsPublish can only be run on push to branch master or tag in repo spockframework/spock
       event: ${System.getenv("GITHUB_EVENT_NAME")}
       ref: ${System.getenv("GITHUB_REF")}
       repo: ${System.getenv("GITHUB_REPOSITORY")}""")
@@ -272,14 +252,17 @@ if (gradle.startParameter.taskNames == ["ghActionsPublish"] || gradle.startParam
     if (javaVersion != javaVersions.min()) {
       throw new IllegalArgumentException("ghActionsPublish can only be run on Java ${javaVersions.min()} but was run on $javaVersion")
     }
-    if (snapshotVersion) {
+    /*
+      We want to release only snapshots directly from master, final releases will be tagged and then published from that tag.
+     */
+    if (snapshotVersion || isTag) {
       gradle.startParameter.taskNames += ["publish"]
     } else {
       gradle.startParameter.taskNames += ["tagRelease"]
     }
   }
 
-  if (gradle.startParameter.taskNames == ["ghActionsDocs"]) {
+  if (gradle.startParameter.taskNames == ["ghActionsDocs"] && (snapshotVersion || isTag)) {
     if (javaVersion != javaVersions.max()) {
       throw new IllegalArgumentException("ghActionsPublish can only be run on Java ${javaVersions.max()} but was run on $javaVersion")
     }
