--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -143,6 +143,7 @@ jobs:
   create-release:
     runs-on: ubuntu-latest
     needs: ['release-spock']
+    if: github.repository == 'spockframework/spock' && startsWith(github.ref, 'refs/tags/spock-')
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
