--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,13 +4,14 @@ on:
   push:
     branches:
       - master
+      - main
     tags:
       - 'spock-*'
 
 jobs:
   build-and-verify:
     runs-on: ${{ matrix.os }}
-    if: github.repository == 'spockframework/spock' && github.ref == 'refs/heads/master'
+    if: github.repository == 'spockframework/spock' && (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main')
     strategy:
       fail-fast: false
       matrix:
