--- a/build.gradle
+++ b/build.gradle
@@ -65,7 +65,7 @@ ext {
     junitPlatformConsole: [group: 'org.junit.platform', name: 'junit-platform-console'],
     log4j               : [group: 'log4j', name: 'log4j', version: '1.2.17'],
     objenesis           : [group: 'org.objenesis', name: 'objenesis', version: '3.1'],
-    jacocoAgent         : [group: 'org.jacoco', name: 'org.jacoco.agent', version: '0.8.6']
+    jacocoAgent         : [group: 'org.jacoco', name: 'org.jacoco.agent', version: '0.8.6', classifier: 'runtime']
   ]
 }
 
@@ -221,7 +221,7 @@ task codeCoverageReport (type: JacocoReport, group: 'Coverage reports') {
 
   additionalSourceDirs.from(reportingProjects.sourceSets.main.allSource.srcDirs)
   additionalClassDirs.from(reportingProjects.sourceSets.main.output)
-  executionData.from(files(reportingProjects.jacocoTestReport.executionData).filter { it.exists() }+ file('spock-specs/build/reports/jacoco/compileTestGroovy.exec'))
+  executionData.from(files(reportingProjects.jacocoTestReport.executionData).filter { it.exists() } + file('spock-specs/build/jacoco/compileTestGroovy.exec'))
 
   reports {
     html.enabled = true
